@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-27T00:56:36Z",
+  "timestamp" : "2025-09-28T01:05:04Z",
   "count_outdated" : 573,
   "uniques_outdated" : 399,
-  "count" : 576,
-  "uniques" : 402,
+  "count" : 577,
+  "uniques" : 403,
   "clones" : [
     {
       "timestamp": "2025-09-18T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2025-09-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
