@@ -1,3 +1,12 @@
+2025-09-28T01:05:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18067212579 # 780
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-28
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 399 573 / 402 576
+* notice: next accum: outdated-unq outdated-all / unq all: 399 573 / 403 577
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-09-27]
+
 2025-09-27T00:56:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18052746313 # 779
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-27
